no margin, gap fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,7 @@ button {
 @media screen and (min-width: 1158px) {
   .title {
     padding: 188px 0;
-    margin-bottom: 120px;
+  
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)), url("../images/background/bg-desk-1-min.jpg")
@@ -775,8 +775,7 @@ button {
   padding-top: 96px;
   padding-bottom: 96px;
   background-color: #2e2f42;
-  display: flex;
-  justify-content: space-around;
+  margin: 0 auto;
 }
 .footer-wrapper {
   display: flex;
@@ -787,7 +786,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  align-items: baseline;
+  
   gap: 72px;
   
 }
@@ -901,7 +900,7 @@ button {
   .subscribe-form {
     display: flex;
     justify-content: flex-start;
-    gap: 72px 24px;
+    
   }
   .footer-email{
     margin-bottom: 0;
@@ -931,16 +930,16 @@ button {
     padding-top: 100px;
     padding-bottom: 100px;
     padding-left: 0;
+    display: flex;
+    justify-content: space-around;
     
   }
   .footer-wrapper {
-    flex-direction: row;
-    
-    font-size: 16px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    flex-wrap: nowrap;
-    gap: no-gap;
+    display: flex;
+      align-items: baseline;
+      padding-left: 15px;
+      flex-wrap: nowrap;
+      gap: 0;
   }
   .webstudio{
     margin-right: 120px;
@@ -950,6 +949,8 @@ button {
     font-size: 16px;
   }
   .social-media{
+    display: block;
+    margin-right: 80px;
     
   }
   .footer-text {
@@ -964,7 +965,7 @@ button {
     background-color: #31d0aa;
   }
   .subscription{
-    margin-left: auto;
+    
   }
 }
 
